# databricks-mfg-mcp-examples

./: .gitignore  CLAUDE.md  EXECUTION_PLAN.md  LOCAL_SETUP.md  PRD.md  README.md  activate.sh  databricks.yml  pyproject.toml  requirements.txt  test_databricks_connect.py  test_mlflow.py  verify_setup.py
.claude/commands/: run-databricks-code.md  search-docs.md  setup_local_env.md
docs/: best-practices-deploying-agents-workflow.md  databricks-agent-uc-tools.md  databricks-mcp-documentation.md  deploying-on-behalf-of-user-agents.md  langgraph-mcp-agent.md
docs/agents/: best-practices-deploying-agents-workflow.md  databricks-agent-uc-tools.md  deploying-on-behalf-of-user-agents.md  langgraph-mcp-agent.md
docs/mcp/: managed-mcp-servers-guide.md
docs/mlflow/: mlflow-agent-development-guide.md  mlflow3-documentation-guide.md
docs/vector-search/: vector-search-guide.md
src/: __init__.py
src/data/: README.md  create_delta_tables.py  generate_sample_data.py  setup_unity_catalog.py
src/utils/: __init__.py  databricks_env.py  sql_utils.py
tests/: test_data_creation.py  test_utils.py
