[project]
name = "databricks-mfg-mcp-examples"
version = "0.1.0"
description = "Multi-tenant Supply Chain & Sales agentic system using Databricks MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core MCP and LangGraph dependencies
    "mcp>=1.0.0",
    "langgraph==0.3.4",
    
    # Databricks dependencies
    "databricks-sdk",
    "databricks-agents>=1.0.0",
    "databricks-connect>=16.1.0",
    "mlflow==3.3.0",
    
    # Data processing
    "pandas",
    "numpy",
    "pydantic>=2.5.0,<2.12",
    
    # Web framework for Databricks Apps
    "fastapi",
    "uvicorn",
    
    # Utilities
    "python-dotenv",
    "httpx",
    "aiofiles",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]
ignore = ["S101", "S608", "S603"]
